--- a/backend/spring-jwt-admin-system/src/main/resources/application.properties
+++ b/backend/spring-jwt-admin-system/src/main/resources/application.properties
@@ -1,12 +1,11 @@
 jwt.secret=techgeeknext
 
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url = jdbc:mysql://localhost:3306/systemAdmin?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.url = jdbc:mysql://localhost:3306/systemAdmin?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false&useUnicode=yes&characterEncoding=UTF-8
 spring.datasource.username = root
 spring.datasource.password = ala#12tola
 spring.datasource.platform=mysql
 spring.datasource.initialization-mode=always
-
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
