--- a/backend/spring-jwt-admin-system/src/main/resources/application.properties
+++ b/backend/spring-jwt-admin-system/src/main/resources/application.properties
@@ -2,7 +2,7 @@ jwt.secret=techgeeknext
 
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 spring.datasource.url = jdbc:mysql://localhost:3306/systemAdmin?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false&useUnicode=yes&characterEncoding=UTF-8
-spring.datasource.username = root
+spring.datasource.username = systemadmin
 spring.datasource.password = ala#12tola
 spring.datasource.platform=mysql
 spring.datasource.initialization-mode=always
