--- a/backend/spring-jwt-admin-system/pom.xml
+++ b/backend/spring-jwt-admin-system/pom.xml
@@ -8,14 +8,20 @@
 		<version>2.2.1.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.techgeeknext</groupId>
+	<groupId>com.marcin.kupiec</groupId>
 	<artifactId>spring-boot-jwt</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	
+	<packaging>war</packaging>
+	
 	<name>spring-jwt-admin-system</name>
 	<description>Universal project</description>
 
 	<properties>
-		<java.version>1.8</java.version>
+		<java.version>11</java.version>
+			<start-class>
+			com.marcin.kupiec.SpringBootJwtApplication
+		</start-class>
 	</properties>
 
 	<dependencies>
@@ -23,7 +29,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-
+		<dependency>
+  			 <groupId>org.springframework.boot</groupId>
+   			<artifactId>spring-boot-starter-tomcat</artifactId>
+   			<scope>provided</scope>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
@@ -50,7 +60,7 @@
             <artifactId>spring-boot-devtools</artifactId>
             <optional>true</optional>
         </dependency>
-        
+        		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -65,6 +75,7 @@
 	</dependencies>
 
 	<build>
+	<finalName>${artifactId}</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
