--- a/frontend/angular-jwt-admin-system/package.json
+++ b/frontend/angular-jwt-admin-system/package.json
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.2.7",
+    "@angular/animations": "^11.2.14",
     "@angular/cdk": "^11.2.8",
     "@angular/common": "~11.2.7",
     "@angular/compiler": "~11.2.7",
@@ -27,7 +27,7 @@
     "primeicons": "^4.1.0",
     "primeng": "^11.3.1",
     "rxjs": "~6.6.0",
-    "tslib": "^2.0.0",
+    "tslib": "^2.3.1",
     "zone.js": "~0.11.3"
   },
   "devDependencies": {
