--- a/backend/spring-jwt-admin-system/src/main/resources/application.properties
+++ b/backend/spring-jwt-admin-system/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 spring.datasource.url = jdbc:mysql://localhost:3306/systemAdmin?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false&useUnicode=yes&characterEncoding=UTF-8
 spring.datasource.username = systemadmin
-spring.datasource.password = ala#12tola
+spring.datasource.password = tajneHaslo
 spring.sql.init.platform=mysql
 spring.sql.init.mode=always
 ## Hibernate Properties
